# server.js
@@ -9,18 +9,32 @@ const teamsRoute = require("./routes/teamRoute.js")
 const notesRoute = require("./routes/noteRoute.js")
 const auth = require("./auth/auth.js")
 const swaggerUi = require('swagger-ui-express');
+const cors = require("cors")
 const swaggerDocument = require('./swagger-output.json');
+
+const GitHubStrategy = require("passport-github2").Strategy
+const passport = require("passport")
+const session = require("express-session")
+const userModel = require("./models/userModel.js");
+const utils = require('./utils/utils.js');
+const strings = require('./utils/strings.js');
+const { ObjectId } = require('mongodb');
 
 
 
 app.use(express.json())
-// app.use((req, res, next) => {
-//     if (!req.is("application/json")) {
-//         return next(utils.constructError("Unsupported Request"))
 
-//     }
-//      next()
-// })
+
+app.use(session({
+    secret: env.SECRET,
+    resave: false,
+    saveUninitialized: true
+}))
+app.use(passport.session())
+app.use(cors({
+    origin: '*',
+    methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE']
+}))
 app.use((err, req, res, next) => {
     if (err instanceof SyntaxError && err.status === 400 && 'body' in err) {
         return next(utils.constructError("Malformed JSON"));
@@ -39,12 +53,38 @@ app.use("/categories", categoryRoute)
 app.use("/teams", teamsRoute)
 app.use("/notes", notesRoute)
 
-// app.use("/", async (req, res, next) => {
-//     let d = await userModel.insertUser()
-//     res.send("Hello World")
+app.get("/login", passport.authenticate('github'), (req, res) => { })
+app.get("/", home)
+app.get("/github/callback", passport.authenticate('github', {
+    failureRedirect: "/api-docs", session: false
+})
+    , (req, res) => {
+        req.session.user = req.user;
+        res.redirect('/');
+    })
 
-// })
+passport.use(new GitHubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.CALLBACK_URL
+},
+    async function (accessToken, refreshToken, profile, done) {
+        //User.findOrCreate({ githubId: profile.id }, function (err, user) {
+        const userGH = await userModel.getGithubUser(profile.id)
+        if (!userGH) {
+            const user = await userModel.insertUser({ name: profile.displayName, username: profile.username, githubId: profile.id })
+        }
+        return done(null, profile);
+        //});
+    }
+));
+passport.serializeUser((user, done) => {
+    done(null, user);
+});
 
+passport.deserializeUser((user, done) => {
+    done(null, user);
+});
 
 app.use((err, req, res, next) => {
     if (err.stack) {
@@ -72,3 +112,13 @@ process.on('SIGINT', async () => {
     await db.close();
     process.exit(0);
 });
+
+
+async function home(req, res, next) {
+    if (req._id) {
+        const user = await userModel.getUserById(req._id)
+        res.status(200).json({ sharedId: user.username })
+    } else {
+        return next(utils.constructError(strings.UNAUTHORIZED))
+    }
+}
